--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,10 @@ a {
   text-decoration: none;
 }
 
+.headline {
+  color : red;
+  font-weight: 700;
+}
 
 
 @media (prefers-color-scheme: dark) {
