--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,14 +4,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    
+    --color-black: #000;
+    --color-pink: #fa96aa;
   }
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 html,
@@ -19,7 +18,6 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color: #000;
-
 }
 
 body {
