--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,8 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding : 0;
 }
 
 html,
@@ -18,6 +20,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   color: #000;
+
 }
 
 body {
