--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+
+  margin-top: 80px;
+  background-color: #fff;
+  padding : 20px 20px;
 }
 
 .box {
