--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,14 +1,82 @@
-.navigation {
-    background-color: #ccc;
+.navigationContainer {
+    background-color: #fff;
     width: 100%;
-    height: 50px;
+    height: 80px;
+    z-index: 100;
+    position: fixed;
+}
+
+.navigation {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+     position: relative;
+    z-index: 11;
+    background-color: #fff;
+    box-shadow: 0px 3px 6px #00000029;
+}
+
+.navigation .bars {
+    color: var(--color-pink);
+    width: 50px;
+    height: 30px;
 }
 
 .navigationBar {
-    display: none;
+    /* display: none; */
+   
+}
+
+.navigationPane {
+    
+    background-color: #000;
+    color: #fff;
+    text-align: right;
+    border-radius: 0 0 16px 16px;
+    transition: top 0.1s ease-in-out;
+    overflow: hidden;
+    top: -500px;
+    position: relative;
+    z-index: 9;
+    box-shadow: 0px 3px 6px #00000029;
 
 }
 
+.navigationPane a {
+    display: block;
+    padding: 16px 26px  16px 0;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.navigationPane a:hover {
+    background-color: var(--color-pink);
+}
+
+
+.navigation .logoImg {
+
+    width: 100%;
+    height: 40px;
+}
+
+.navigationBarOpen {
+    top: 0;
+}
+
+
 .styles.navigationBar {
     display: block;
+}
+
+.logo {
+    left: 20px;
+    position: relative;
+}
+
+.actions {
+    position: relative;
+    right: 20px;
 }
