--- a/src/components/product/product.module.css
+++ b/src/components/product/product.module.css
@@ -1,12 +1,73 @@
 .product {
 
-    background-color: blue;
+    background-color: white;
+    border-radius: 20px;
+    height: 100%;
 
+    position: relative;
+    box-shadow: 2px 2px 5px darkgray;
+}
+
+.imageContainer {
+    position: relative;
+}
+
+
+
+.productDescription {
+
+    padding : 20px;
+}
+
+.productDiscount {
+    text-align: center;
+    color: #fff;
+    min-width: 100px;
+    min-height: 60px;
+
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: var(--color-pink);
+    border-radius: 15px;
+   
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    flex-direction: column;
+}
+
+.productDiscountText {
+    font-size: 18px;
+    line-height: 18px;
+    
+}
+.productDiscountPercent {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 22px;
+}
+.productTitle {
+    font-size: 22px;
+  
+}
+
+.productPrice {
+
+    font-size: 18px;
+    font-weight: 700;
 }
 
 .product img{
-
+    border-radius: 20px 20px 0 0;
     width: 100%;
     height: 100%;
+    border-bottom: 3px solid var(--color-pink);
+  
+}
 
+@media (min-width: 728px) {
+    .product {
+        width: calc(50% - 10px);
+    }
 }
