--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
     --color-black: #000;
     --color-pink: #fa96aa;
     --color-grey: #D9D9D9;
+    --color-flat: #f7f0f2;
     
   }
 }
@@ -17,6 +18,13 @@
   padding : 0;
 }
 
+.page {
+  margin-top: 80px;
+}
+html {
+  scroll-behavior: smooth;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -25,8 +33,13 @@ body {
 
 }
 
+p{
+  margin: 10px 0;
+}
+
 body {
   background-color: var(--main-color);
+  scroll-behavior: smooth;
 
 }
 
@@ -57,6 +70,7 @@ a {
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    scroll-behavior: smooth;
   }
 
   .box {
