--- a/src/components/products/products.module.css
+++ b/src/components/products/products.module.css
@@ -2,6 +2,8 @@
 
     width: 100%;
     height: 100%;
+    scroll-margin-top: 80px;
+    padding : 0 20px;
     
 }
 
@@ -10,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 30px;
     flex: 1;
 }
 .productsHeader {
