--- a/src/components/questions/accordians.module.css
+++ b/src/components/questions/accordians.module.css
@@ -1,7 +1,42 @@
 .textblock {
     display: none;
+    padding-left: 63px;
+    padding-right: 20px;
 }
 
 .textblock.active {
     display: block;
+}
+
+.icon {
+    color : silver;
+    font-size: 42px;
+}
+.accordion {
+    padding : 0 20px;
+
+  
+}
+
+.accordionContainer {
+    border-bottom: 1px solid var(--color-pink);
+    padding : 20px 0;
+}
+.accordion h2{
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 700;
+    display: flex;
+    justify-content: left;
+    gap: 20px;
+    align-items: center;
+}
+
+
+.accordion.active .textblock{
+    display: block;
+}
+
+.accordion.active .icon{
+    color : var(--color-pink);
 }
