--- a/src/components/subscribe/subscriberformular.module.css
+++ b/src/components/subscribe/subscriberformular.module.css
@@ -1,37 +1,48 @@
 .form {
-    margin-bottom: 20px;
-
+    padding : 50px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
-.form legend {
-    padding : 0 20px;
-}
   
 .form input {
-    margin: 0 10px;    
-    border-radius: 20px;
+    margin-top: 5px;
+    background-color: #fff;
+    border: 1px solid #000;
     padding: 10px;
+    width: 100%;
+    color: #000
 }
 .form textarea {
-    margin: 0 10px;    
-    border-radius: 20px;
+    margin-top: 5px;
+    background-color: #fff;
+    border: 1px solid #000;
     padding: 10px;
+    display: block;
+    width: 100%;
+    height: 300px;
+    color: #000
 }
 
 .form button {
-    padding : 10px;   
-    border-radius: 10px;
+    background-color: var(--color-pink);
+    border : 0;
+    padding: 12px 20px;
+    border-radius: 40px;
+    font-weight: 700;
+    display: block;
+    color: #fff;
+    width: 133px;
+   
 }
   
 
 .form fieldset {
-    border : 1px solid #ccc;
-    padding : 20px;
-    margin : 20px 0;
-    
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    border : 0px solid #ccc;
+   
+  
 }
 
 .formError {
@@ -44,9 +55,49 @@
 
 /* Response View */
 .responseView {
-    background-color: silver;
+    background-color: var(--color-flat);
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    bottom : 0;
+    right: 0;
+    left : 0;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.response-view {
-    background-color: silver;
+
+.responseView .btn {
+    background-color: var(--color-pink);
+    border : 0;
+    padding: 22px 40px;
+    border-radius: 40px;
+    font-weight: 700;
+    display: block;
+    color: #fff;
+    
+    margin: 40px auto;
+}
+
+.responseView .image {
+    border-radius: 100%;
+    border: 10px solid var(--color-pink);
+    margin: 30px 0;
+}
+
+
+.responseView .name {
+    font-size:  18px;
+    color: var(--color-pink);
+    font-weight: 700;
+}
+
+.responseView .headline {
+    font-size:  56px;
+    font-weight: 700;
+    margin : 20px 0;
 }
