--- a/src/components/common/header/header.module.css
+++ b/src/components/common/header/header.module.css
@@ -1,17 +1,19 @@
+/* 
 
-.productsHeader {
+    Header Component Styles
+
+*/
+
+.header {
 
     margin: 40px 0;
 }
 
-.productsHeader h2{
+.header h2{
     
     text-align: center;
     font-weight: 700;
     margin: 0;
     font-size: clamp(1rem, 15vw, 5rem);
-}
 
-.productsHeaderSub {
-    color: var(--color-pink);
 }
