--- a/src/components/ctas/fullteaser/fullteaser.module.css
+++ b/src/components/ctas/fullteaser/fullteaser.module.css
@@ -1,15 +1,19 @@
-.fullteaser {
-    
-}
+/* 
 
+    Reviews Component Styling
+
+*/
 
 .fullteaser img {
+
     width: 100vw;
     height: calc(100vh - 80px);
     object-fit:cover;
+
 }
 
-.cta {
+.fullteaser .cta {
+
     position: absolute;
     display: flex;
     justify-content: center;
@@ -22,28 +26,29 @@
   
 }
 
-.body {
+.cta .body {
+
     margin: auto auto;
-      margin-top: 40px;
+    margin-top: 40px;
     font-size: 18px;
     max-width: 70%;
 }
 
-.ctaBox {
+.cta .content {
+
     background-color: #f7f0f2;
     text-align: center;
     color: #000;
     width: 100vw;
     height: 50%;
     padding: 0 20px;
-
     display: flex;
     justify-content: center;
     align-items: center;
   
 }
 
-.ctaBox .btn {
+.cta .content .btn {
     margin-top: 40px;
     background-color: var(--color-pink);
     border : 0;
@@ -54,14 +59,14 @@
     color: #fff;
 }
 
-.ctaBox h1 {
+.cta .content h1 {
     color: #000;
     text-align: center;
     font-size: 54px;
 }
 
 @media (min-width: 728px) {
-    .ctaBox {
+    .cta .content {
         width: 60%;
     }
 }
