--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,4 +1,11 @@
-.navigationContainer {
+/* 
+
+    Navigation Component Styling
+
+
+*/
+
+.navigation {
     background-color: #fff;
     width: 100%;
     height: 80px;
@@ -6,7 +13,7 @@
     position: fixed;
 }
 
-.navigation {
+.bar {
     width: 100%;
     height: 80px;
     display: flex;
@@ -18,35 +25,77 @@
     box-shadow: 0px 3px 6px #00000029;
 }
 
+/*
+
+    Logo / Brand left side styling
+
+*/
+.bar .logo {
+    left: var(--main-gutter);
+    position: relative;
+}
+
+.bar .logo .image {
+
+    width: 100%;
+    height: 40px;
+
+}
+
+
+/*
+
+    Action side styling. Right side
+
+*/
+
 .actions {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 60px;
+    position: relative;
+    right: var(--main-gutter);
 }
 
+/* 
 
-.navigation .bars {
+    "Burger" menu styling
+
+*/
+.bar .bars {
     color: var(--color-pink);
     width: 50px;
     height: 30px;
     margin-top: 4px;
 }
 
-.navigation .bag {
-    color: silver;
+/* 
+
+    "Shopping" menu styling
+
+*/
+.bar .bag {
+    color: var(--color-grey);
     width: 50px;
     height: 30px;
 }
 
-.navigation .bag.active {
-    color: var(--color-pink);;
+.bar .bag.active {
+    color: var(--color-pink);
 }
 
-.navigationPane {
+/* 
+
+    Navgiaion dropdown Styling
+    Menu Items
+
+*/
+
+.dropdown {
     
-    background-color: #000;
-    color: #fff;
+    background-color: var(--color-black);
+    color: var(--color-white);
     text-align: right;
     border-radius: 0 0 16px 16px;
     transition: top 0.1s ease-in-out;
@@ -54,27 +103,35 @@
     top: -1000px;
     position: relative;
     z-index: 9;
-    box-shadow: 0px 3px 6px #00000029;
+    box-shadow: 0px 3px 6px var(--color-shadow);
 
 }
 
-.navigationPane a {
+.dropdown.open {
+    top: 0;
+}
+
+/* 
+
+    Menu Items
+
+*/
+.dropdown a {
     display: block;
     padding: 16px 26px  16px 0;
     font-weight: 700;
     text-transform: uppercase;
 }
 
-.navigationPane a:hover {
+.dropdown a:hover {
     background-color: var(--color-pink);
 }
 
+/* 
 
-.navigation .logoImg {
+    Shopping Basket Counter Styling
 
-    width: 100%;
-    height: 40px;
-}
+*/
 
 .basketCounter {
     position: absolute;
@@ -90,89 +147,44 @@
     opacity: 0.6;
 }
 
-.basketItem {
-
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 15px;
-}
-
-.description {
-    text-align: left;
-    width: 100%;
-}
-
-.title {
-    color: #000;
-    font-size: 16px;
-}
-
-.price {
-    text-align: right;
-    font-size: 18px;
-    font-weight: 700;
-    color: #000;
-}
-
-.result {
-    font-size: 18px;
-    color : #000;
-    text-align: right;
-    font-weight: 700;
-}
-
-.image {
-
-    border-radius: 15px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-
-}
-
-.navigationBarOpen {
-    top: 0;
-}
-
-.logo {
-    left: 20px;
-    position: relative;
-}
 
 
-.actions {
-    position: relative;
-    right: 20px;
-}
+/* 
 
-.empty {
+    Shopping Basket Pane Styling
+    To Contain the items in the basket
 
-    color : #000;
-    text-align: center;
+*/
+.basketDropdown {
+    --baskePane-color: var(--color-white);
+    --baskePane-height: 50vh;
 
-}
-
-/* BASKET */
-.basketPane {
     position: absolute;
-    background-color: #fff;
-    color: #fff;
+    min-height: var(--baskePane-height);
     padding: 20px;
+    background-color: var(--baskePane-color);
     border-radius: 0 0 16px 16px;
     transition: top 0.1s ease-in-out;
     overflow: hidden;
-    top: -500px;
+    top: -1500px;
     right : 0;
     left : 0;
     z-index: 10;
-    box-shadow: 0px 3px 6px #00000029;
+    box-shadow: 0px 3px 6px var(--color-shadow);
 
 }
 
-.basketPaneOpen {
+.basketDropdown.open {
     top: 80px;
 }
 
-.basketPaneClosed {
-    top: -500px;
+/* 
+
+    Check Out Link Styling
+
+*/
+.checkout a{
+    text-align: right;
+    color : blue;
+    display: block;
 }
