--- a/src/components/questions/accordians.module.css
+++ b/src/components/questions/accordians.module.css
@@ -1,27 +1,13 @@
-.textblock {
-    display: none;
-    padding-left: 63px;
-    padding-right: 20px;
-}
+/* 
 
-.textblock.active {
-    display: block;
-}
+    Accordion Component Styling
 
-.icon {
-    color : silver;
-    font-size: 42px;
-}
+*/
+
 .accordion {
     padding : 0 20px;
-
-  
 }
 
-.accordionContainer {
-    border-bottom: 1px solid var(--color-pink);
-    padding : 20px 0;
-}
 .accordion h2{
     font-size: 18px;
     line-height: 18px;
@@ -32,11 +18,35 @@
     align-items: center;
 }
 
-
-.accordion.active .textblock{
-    display: block;
+.body {
+    border-bottom: 1px solid var(--color-pink);
+    padding : 20px 0;
 }
+
+.icon {
+    color : silver;
+    font-size: 42px;
+}
+
+
+
+.textblock {
+    display: none;
+    padding-left: 63px;
+    padding-right: 20px;
+}
+
+/* 
+
+    Accordion Active
+
+*/
+
 
 .accordion.active .icon{
     color : var(--color-pink);
+}
+
+.accordion.active .textblock{
+    display: block;
 }
