--- a/src/components/subscribe/subscribe.module.css
+++ b/src/components/subscribe/subscribe.module.css
@@ -1,3 +1,9 @@
+/* 
+
+    Subscriber Component Styling
+
+*/
+
 .form {
     padding : 50px;
     background-color: #fff;
@@ -6,24 +12,34 @@
     gap: 20px;
 }
 
-  
+
+/* 
+
+    Form Fields
+
+*/
+
 .form input {
     margin-top: 5px;
-    background-color: #fff;
-    border: 1px solid #000;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-black);
+    color: var(--color-font-base);
     padding: 10px;
     width: 100%;
-    color: #000
+    font-family: Quicksand, sans-serif;
 }
+
 .form textarea {
     margin-top: 5px;
-    background-color: #fff;
-    border: 1px solid #000;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-black);
+    color: var(--color-font-base);
     padding: 10px;
     display: block;
     width: 100%;
     height: 300px;
-    color: #000
+    resize: none;
+    font-family: Quicksand, sans-serif;
 }
 
 .form button {
@@ -33,28 +49,33 @@
     border-radius: 40px;
     font-weight: 700;
     display: block;
-    color: #fff;
+    color: var(--color-white);
     width: 133px;
    
 }
-  
 
-.form fieldset {
-    border : 0px solid #ccc;
-   
-  
-}
+/* 
 
-.formError {
+    Form Error
+
+*/
+
+.form .formError {
+
     border-width: 2px;
     border-style: solid;
-    border-color: red;
+    border-color: var(--color-pink);
 
 }
 
 
-/* Response View */
-.responseView {
+/* 
+
+    Subscribe Response View
+
+*/
+
+.response {
     background-color: var(--color-flat);
     position: absolute;
     width: 100vw;
@@ -70,8 +91,26 @@
     text-align: center;
 }
 
+.response .headline {
+    font-size:  56px;
+    font-weight: 700;
+    margin : 20px 0;
+}
 
-.responseView .btn {
+.response .name {
+    font-size:  18px;
+    color: var(--color-pink);
+    font-weight: 700;
+}
+
+.response img {
+    border-radius: 100%;
+    border: 10px solid var(--color-pink);
+    margin: 30px 0;
+}
+
+.response .btn {
+
     background-color: var(--color-pink);
     border : 0;
     padding: 22px 40px;
@@ -79,25 +118,11 @@
     font-weight: 700;
     display: block;
     color: #fff;
-    
     margin: 40px auto;
-}
 
-.responseView .image {
-    border-radius: 100%;
-    border: 10px solid var(--color-pink);
-    margin: 30px 0;
 }
 
 
-.responseView .name {
-    font-size:  18px;
-    color: var(--color-pink);
-    font-weight: 700;
-}
 
-.responseView .headline {
-    font-size:  56px;
-    font-weight: 700;
-    margin : 20px 0;
-}
+
+
